# VoiceAIAgent

./: .env.example  README.md  agent_config.json  main.py  pyproject.toml
slides/: model_options.md  pipeline.md  stt_comparison.md
src/: api.py
src/core/: __init__.py  agent.py  restaurant.py  settings.py
src/middleware/: logging.py
src/routers/: deepgram_twillio.py  twillio.py
src/services/: __init__.py  tts.py  webhook.py  whisper_stt.py
