[project]
name = "rime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepgram-sdk>=6.0.1",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "ruff>=0.15.4",
    "twilio>=9.10.2",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]
